--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "redux": "^4.0.4"
   },
   "devDependencies": {
-    "babel-preset-expo": "^6.0.0"
+    "babel-preset-expo": "^6.0.0",
+    "redux-devtools": "^3.5.0",
+    "redux-devtools-extension": "^2.13.8"
   },
   "private": true
 }
