--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "expo": "^34.0.1",
     "expo-font": "^6.0.1",
+    "expo-linear-gradient": "^6.0.0",
     "moment": "^2.24.0",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
@@ -23,7 +24,8 @@
     "react-navigation-stack": "^1.5.4",
     "react-navigation-tabs": "^2.4.1",
     "react-redux": "^7.1.1",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^6.0.0",
